--- a/Slides/Class 12.qmd
+++ b/Slides/Class 12.qmd
@@ -207,7 +207,7 @@ ggplot(df, aes(x=year, y=deaths, color=company)) +
 
     -   i.e. "if Lambeth had not moved the reservoir upstream, there would have been a parallel increase in the number of cholera deaths among their customers"
 
-    -   But for \[the treatment\] the trends between treated and control units should be parallel
+    -   or "But for \[the treatment\] the trends between treated and control units should be parallel"
 
     -   Does **not** require an assumption that observations are balanced on expected values of the outcome. Unobserved confounding only matters to the extent it impacts the trend.
 
@@ -307,9 +307,128 @@ tidy(model)|>
 :::
 :::::
 
-### Two-Way Fixed Effects
+## Card and Krueger 1994
 
-The two-way FE estimate can be generalized to multiple groups/multiple periods by using a fixed effect for each group/time in place of the indicator for control vs. treatment cases:
+Do minimum wage increases reduce employment rates?
+
+::: incremental
+-   Minimum wage increase in April 1, 1992 in New Jersey from \$4.25 to \$5.05 per hour
+-   Card and Krueger surveyed fast food restaurants in New Jersey and Pennsylvania in two waves:
+    -   Wave 1: February - March 1992 (pre-treatment)
+    -   Wave 2: November - December 1992 (post-treatment)
+:::
+
+## Card and Krueger 1994
+
+Results (reproduced by Angrist and Krueger)
+
+![](images/did_minimum_wage.png)
+
+## Card and Krueger 1994
+
+```{r}
+library(tidyverse)
+library(latex2exp)
+library(ggpubr)
+
+data<-tibble(
+  state = factor(c(1,1,2,2,3,3), labels=c('PA', "NJ","NJ Counterfactual")),
+  avg_employment = c(23.33, 21.17, 20.44, 21.03, 20.44, 18.28),
+  
+  time_period = factor(c(1,2,1,2, 1,2), 
+                       levels = c(1,2),
+                       labels=c("Before", "After")))
+
+
+
+data|>
+  filter(state %in% c("PA", "NJ Counterfactual"))|>
+ggplot(aes(x=time_period, y=avg_employment, group=state,
+                 color = state
+)) + 
+  geom_line(aes(linetype = state), lwd=1) +
+  geom_point()+
+  theme_minimal() +
+  xlab("Time Period") +
+  ylab("Average Employment") +
+  scale_linetype_manual(values=c('solid','dashed')) +
+  scale_color_manual(values=c("#f28e2b","#bab0ac")) +
+  expand_limits(x=c(1,4)) +
+  annotate("text" , x=1.5, y=23,1, label=TeX("$21.17 - 23.33  = -2.16$"), parse=TRUE) +
+  annotate('text', x=1.5, y=18.28, label=TeX("$20.44 - 2.16 = 18.28$"), parse=TRUE) +
+  labs(caption="Observed PA employment trend and assumed counterfactual for New Jersey")
+
+  
+```
+
+## Card and Krueger 1994
+
+```{r}
+
+
+
+
+ggplot(data, aes(x=time_period, y=avg_employment, group=state,
+                 color = state
+                 )) + 
+  geom_line(aes(linetype = state), lwd=1) +
+  geom_point()+
+  theme_minimal() +
+  xlab("Time Period") +
+  ylab("Average Employment") +
+  scale_linetype_manual(values=c('solid','solid', 'dotted')) +
+  scale_color_manual(values=c("#f28e2b" ,"#76b7b2", "#bab0ac"))+
+  expand_limits(x=c(1,4)) +
+    annotate("text" , x=1.5, y=23.1, label=TeX("$21.17 - 23.33  = -2.16$"), parse=TRUE) +
+  annotate('text', x=1.5, y=21.03, label=TeX("$21.03 - 20.44 = 0.59 $"), parse=TRUE) +
+  annotate('text', x=1.5, y=18.28, label=TeX("$20.44 - 2.16 = 18.28$"), parse=TRUE) +
+  annotate('text' , x=2.5, y=21.03, label=TeX("DiD $= 21.03 - 18.28 = 2.75"))+
+   labs(caption="Counterfactual vs. Actual outcome for New Jersey")
+
+
+```
+
+## Card and Krueger 1994
+
+How might the parallel trends assumption be violated here? Some scenarios to consider:
+
+::: incremental
+-   If employers in New Jersey laid off employees in *anticipation* of the wage increase, then the job losses might have already happened by February
+
+-   If stores that had laid offs failed to response to the second wave of the survey, then the "after" period has a different composition compared to the first.
+
+-   If Pennsylvania employers also raised wages in response to the New Jersey law, then the two trends aren't really independent.
+
+-   If New Jersey was more insulated from the national economic trends than Pennsylvania, then the the parallel trends assumption might not hold.
+:::
+
+## Card and Krueger 1994
+
+::::: columns
+::: {.column width="50%"}
+-   Card and Krueger address some of these with alternate model specifications. Since the DiD model is essentially OLS, they can include controls for wave 1 characteristics the same way you would in a regular regression model.
+
+-   The assumption then becomes "trends are *conditionally* expected to be parallel"
+:::
+
+::: {.column width="50%"}
+![Card, D. (1993). Minimum Wages and Employment: A Case Study of the Fast Food Industry in New Jersey and Pennsylvania.](images/card_and_krueger_table5.png)
+:::
+:::::
+
+## Card and Krueger 1994
+
+[Card and Krueger replication script](https://github.com/Neilblund/GVPT728_Winter24/blob/main/Additional%20Code%20and%20Data/ck_did_example.R)
+
+# Multiple Periods and Cases
+
+What about multiple cases or time periods? Or cases where observations are treated at different times?
+
+For instance, what if I want to look at multiple states that passed minimum wage laws on different dates?
+
+# Two-Way Fixed Effects
+
+The difference-in-difference model is **often generalized\*** to multiple groups/multiple periods by using a fixed effect for each group/time in place of the indicator for control vs. treatment cases:
 
 $$
 \hat{Y}_{gt} = \alpha_g + \gamma_t +  \delta X_{gt} 
@@ -323,85 +442,22 @@ $$ $$
 \delta_{gt} = \text{Post Treatment Indicator}
 $$
 
-## Card and Krueger 1994
-
--   Do minimum wage increases reduce employment? Reasonable expectation from classical economics, but empirical evidence is limited.
--   Collected employment data before and after a minimum wage increase in New Jersey and compared to data from the same time periods for Pennsylvania
-
 . . .
 
-Results (reproduced by Angrist and Krueger)
+\* =prepare for caveats on this!
 
-![](images/did_minimum_wage.png)
+## Two-Way Fixed Effects Alternatives
 
-## Including controls
+-   This isn't really equivalent to the difference-in-differences model if there are multiple time periods and or differences in treatment timings [See: Imai, K., & Kim, I. S. (2021)](https://www-cambridge-org.proxy-um.researchport.umd.edu/core/journals/political-analysis/article/on-the-use-of-twoway-fixed-effects-regression-models-for-causal-inference-with-panel-data/F10006D0210407C5F9C7CAC1EEE3EF0D) and won't estimate a causal effect even if the parallel trends assumption holds in most situations
 
--   Parallel trends may only hold conditionally on some observed characteristic
-
-    -   For instance, maybe states that increase the minimum wage are more likely to already have a low supply of labor which leads to different growth trends in the future. In that case, you might want to include a measure of the labor supply in a state.
-
--   Controls should be based on characteristics that do not change or were measured prior to treatment.
-
-    -   Card and Krueger include controls for region and franchise to account for compositional differences between PA vs NJ fast food workers.
-
--   In practice, this is as simple as adding an additional control to a regression.
+-   But we have some [alternative methods](https://bcallaway11.github.io/did/index.html)!
 
 ## Considerations
 
--   In general, it makes sense to just stick with the linear probability model, despite its flaws
+-   Is the parallel trends assumption plausible? The best research will attempt to justify this assumption using multiple lines of evidence like:
 
--   Simplest setup is the pre vs. post treatment cross-sectional case.
+    -   Placebo tests
 
--   Biggest assumption is the parallel trend. Visual examination can help, especially if you have observations for prior outcomes
+    -   Examining multiple time periods to see if trends are parallel long before some outcome.
 
-### Staggered exposure
-
-Including multiple years and cases with staggered treatments can make it easier to justify the parallel trends assumption. "Eventually treated" units are often a more sensible comparison case for units that have been recently treated.
-
-However, there's an issue with "early treated" and "late treated" units being weighed differently in the results.
-
-### Staggered exposure
-
-```{r}
-#install.packages("did")
-library(did)
-data(mpdta)
-mpdta <- mpdta |>
-  mutate(treated = as.numeric(year >= first.treat & first.treat!=0))
-mpdta |>
-  mutate(countyreal = paste(countyreal)) |>
-  rename(countyid = countyreal) |>
-  select(year, countyid, first.treat, treated) |>
-  slice_head(n=10)|>
-  kbl(digits=3)|>
-  kable_classic()
-
-
-
-```
-
-### Staggered exposure
-
-```{r}
-
-mpdta|>
-  mutate(countyreal= factor(as.numeric(factor(countyreal))),
-         year=year,
-         treated  =case_when(first.treat!=0 & treated==1 ~  "treated", 
-                             .default ='not treated'),
-         
-         treat = case_when(first.treat==0 ~ "never treated", 
-                           .default ='eventually treated'
-                           )
-         )|>
-  ggplot(aes(y=reorder(countyreal, first.treat), x=year, fill=treated), 
-         color='white', alpha=.5) + 
-  geom_tile(color='lightgrey') +
-  ylab("") +
-  theme(axis.text.y = element_blank(),
-        axis.ticks.y=element_blank()
-        ) + 
-  facet_wrap(~treat, scales='free', nrow=1)  +
-  scale_fill_manual(values=c("#56B4E9", "#D55E00"))
-
-```
+-   2 way fixed effects models might not be equivalent to the difference-in-differences method, so more recent analyses should account for this.
